fixed alignment on portfolio/contact page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,7 @@ p {
     background: #FFF; 
     margin: 35px auto 35px auto; 
     width: 918px;
-    height: 500px;
+    height: 550px;
     padding: 30px;
 }
 
